show errors on login/register page and change axios base url because localhost doesnt working on local network :P

--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@ input:focus {
     -webkit-transition: all 0.3 ease;
     transition: all 0.3 ease;
     cursor: pointer;
+    background: #5b08a7;
 }
 
 .btn-block {
@@ -81,11 +82,11 @@ input:focus {
     background-color: rgba(0, 0, 0, 0.1);
 }
 
-/*.btn:hover,*/
-/*.btn:active,*/
-/*.btn:focus {*/
-/*    background: #5b08a7;*/
-/*}*/
+.btn:hover,
+.btn:active,
+.btn:focus {
+    background: #5b08a7;
+}
 
 .text-center {
     text-align: center;
